# diskAnalyzer_OSProject

./: Cargo.toml
public/styles/: style.css
src/: main  main.rs
src/public/: index.html
