[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
ptree = "0.4"
build-fs-tree = "0.4.1"
fs = "0.0.5"
time = "0.3.16"
filesize = "0.2.0"
